--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="wrapper">
         <div class="content-container">
 
-            <h1>WEATHER App</h1>
+            <h1>WEATHER APP</h1>
 
             <!-- tab- container  -->
             <div class="tab-container">
